samples/_failures_safe/1761622448_b305e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fce89c37.c: In function ‘main’:
./samples/SAFE/__tmp_fce89c37.c:132:9: error: expected expression at end of input
  132 |         if (!
      |         ^~
./samples/SAFE/__tmp_fce89c37.c:132:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fce89c37.c:132:9: error: expected declaration or statement at end of input
